// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select allows to select a new value shows options list on click renders correctly 1`] = `
<div class="vnt-select">
  <!---->
  <div role="combobox" class="vnt-select__control">
    <div class="vnt-select__chosen"><span class="vnt-select__chosen-label"></span> <span role="presentation" class="vnt-select__options-toggle"></span></div>
    <ul role="listbox" class="vnt-select__options" style="">
      <li role="listitem" class="vnt-select__options-item">List item 1</li>
      <li role="listitem" class="vnt-select__options-item">List item 2</li>
    </ul>
  </div>
</div>
`;

exports[`Select by default renders correctly 1`] = `
<div class="vnt-select">
  <!---->
  <div role="combobox" class="vnt-select__control">
    <div class="vnt-select__chosen"><span class="vnt-select__chosen-label"></span> <span role="presentation" class="vnt-select__options-toggle"></span></div>
    <ul role="listbox" class="vnt-select__options" style="display: none;"></ul>
  </div>
</div>
`;

exports[`Select can be disabled renders correctly 1`] = `
<div class="vnt-select">
  <!---->
  <div role="combobox" class="vnt-select__control">
    <div class="vnt-select__chosen vnt-select__chosen--disabled"><span class="vnt-select__chosen-label"></span> <span role="presentation" class="vnt-select__options-toggle"></span></div>
    <ul role="listbox" class="vnt-select__options" style="display: none;">
      <li role="listitem" class="vnt-select__options-item">List item 1</li>
      <li role="listitem" class="vnt-select__options-item">List item 2</li>
    </ul>
  </div>
</div>
`;

exports[`Select can be disabled then does not allow to show options list renders correctly 1`] = `
<div class="vnt-select">
  <!---->
  <div role="combobox" class="vnt-select__control">
    <div class="vnt-select__chosen vnt-select__chosen--disabled"><span class="vnt-select__chosen-label"></span> <span role="presentation" class="vnt-select__options-toggle"></span></div>
    <ul role="listbox" class="vnt-select__options" style="display: none;">
      <li role="listitem" class="vnt-select__options-item">List item 1</li>
      <li role="listitem" class="vnt-select__options-item">List item 2</li>
    </ul>
  </div>
</div>
`;

exports[`Select can have custom label renders correctly 1`] = `
<div class="vnt-select">
  <label class="vnt-select__title">Custom Select</label>
  <div role="combobox" class="vnt-select__control">
    <div class="vnt-select__chosen"><span class="vnt-select__chosen-label"></span> <span role="presentation" class="vnt-select__options-toggle"></span></div>
    <ul role="listbox" class="vnt-select__options" style="display: none;"></ul>
  </div>
</div>
`;

exports[`Select can have custom optionText renders correctly 1`] = `
<div class="vnt-select">
  <!---->
  <div role="combobox" class="vnt-select__control">
    <div class="vnt-select__chosen"><span class="vnt-select__chosen-label"></span> <span role="presentation" class="vnt-select__options-toggle"></span></div>
    <ul role="listbox" class="vnt-select__options" style="display: none;">
      <li role="listitem" class="vnt-select__options-item">List item 1</li>
      <li role="listitem" class="vnt-select__options-item">List item 2</li>
    </ul>
  </div>
</div>
`;
